{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 53,
  "lineage": "5656e178-a40f-c519-c768-5188be519c19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "provisioner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c920ab98fa7ed2d",
            "arn": "arn:aws:ec2:ap-northeast-2:135149110460:instance/i-0f018aa3bafae04d4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f018aa3bafae04d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cwchoiit-ec2-keypair-home",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aadd0d8bb72acf8d",
            "private_dns": "ip-10-1-195-14.ap-northeast-2.compute.internal",
            "private_ip": "10.1.195.14",
            "public_ip": "43.201.102.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2143849f6876f15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b23fd05b5919269e",
            "tags": {
              "Name": "cwchoiit-provisioner"
            },
            "tags_all": {
              "Name": "cwchoiit-provisioner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022cd0bc5c32d9c7c"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "userdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c920ab98fa7ed2d",
            "arn": "arn:aws:ec2:ap-northeast-2:135149110460:instance/i-0eb9f8fe39fa97d71",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb9f8fe39fa97d71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cwchoiit-ec2-keypair-home",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3059d8622ec3c22",
            "private_dns": "ip-10-1-183-170.ap-northeast-2.compute.internal",
            "private_ip": "10.1.183.170",
            "public_ip": "3.38.208.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04efa4a591e9a8858",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b23fd05b5919269e",
            "tags": {
              "Name": "cwchoiit-userdata"
            },
            "tags_all": {
              "Name": "cwchoiit-userdata"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-022cd0bc5c32d9c7c"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:135149110460:security-group/sg-022cd0bc5c32d9c7c",
            "description": "Security Group for SSH.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to communicate to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022cd0bc5c32d9c7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cwchoiit-vpc-provisioner-userdata",
            "name_prefix": "",
            "owner_id": "135149110460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cwchoiit-vpc-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "cwchoiit-vpc-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "cwchoiit-vpc-provisioner-userdata",
              "Project": "provisioner-userdata",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "cwchoiit-vpc-provisioner-userdata",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a888e12b489eb12"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-1137594084",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-022cd0bc5c32d9c7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from anywhere.",
            "from_port": 80,
            "id": "sgrule-3705421017",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-022cd0bc5c32d9c7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-1784045932",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-022cd0bc5c32d9c7c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}